<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Remove user strings -->

    <string name="allow_gps_message">Permitir usar minha localização</string>
    <string name="disable_account">Desativar conta</string>
    <string name="gosh_message">Poxa vida :(</string>
    <string name="some_more_message">Deseja ficar um pouco mais?</string>
    <string name="unable_message">DESATIVAR</string>
    <string name="no">Não</string>
    <string name="yes">Sim</string>
    <string name="login">Usuário:</string>
    <string name="password">Senha:</string>
    <string name="login_hint">Confirme seu usuário</string>
    <string name="password_hint">Senha</string>
    <string name="back">Voltar</string>

...
