...
    <string name="success_saved">Salvo com sucesso!</string>
    <string name="go">#EUVOU</string>
    <string name="places_ranking">Ranking de lugares</string>
    <string name="recommended_events">Eventos Recomendados</string>
    <string name="edit_register">Alterar cadastro</string>
    <string name="create_event">Cadastrar evento</string>
    <string name="settings">Configurações</string>
    <string name="my_events">Meus Eventos</string>
    <string name="logout">Sair</string>
</resources>

